Agentforce/force-app/main/default/objects/Bid__c/Bid__c.object-meta.xml
<CustomObject>
    <description>AD-190 - custom object to capture the bid management process against an Opportunity</description>
    <label>Bid</label>
    <nameField>
        <label>Bid Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bids</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>