Agentforce/force-app/main/default/objects/Bid__c/fields/Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Award_Date__c</fullName>
    <description>Data Dictionary Consolidation</description>
    <formula>Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Award Date</label>
    <type>Date</type>
</CustomField>