Agentforce/force-app/main/default/objects/Bid__c/fields/BAFO_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>BAFO_Issued_Date__c</fullName>
    <label>BAFO Issued Date</label>
    <type>Date</type>
</CustomField>