Agentforce/force-app/main/default/objects/Bid__c/fields/Bid_CaseSafeId__c.field-meta.xml
<CustomField>
    <fullName>Bid_CaseSafeId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Bid CaseSafeId</label>
    <type>Text</type>
</CustomField>