Agentforce/force-app/main/default/objects/Bid__c/fields/Bid_Manager__c.field-meta.xml
<CustomField>
    <fullName>Bid_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bid Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bids_Bid_Managers</relationshipName>
    <type>Lookup</type>
</CustomField>