Agentforce/force-app/main/default/objects/Bid__c/fields/Bid_Manager_DEP__c.field-meta.xml
<CustomField>
    <fullName>Bid_Manager_DEP__c</fullName>
    <description>Field to capture the Bid Manager for the related Opportunity</description>
    <formula>Opportunity__r.Bid_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bid Manager DEP</label>
    <type>Text</type>
</CustomField>