Agentforce/force-app/main/default/objects/Bid__c/fields/Bid_Sharepoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Bid_Sharepoint_URL__c</fullName>
    <description>AD-449 Sharepoint URL</description>
    <label>Bid Sharepoint URL</label>
    <type>Url</type>
</CustomField>