Agentforce/force-app/main/default/objects/Bid__c/fields/Bid_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Start_Date__c</fullName>
    <description>AD-303 Bid Start Date to be validated against the award date and the RFI/RFP dates</description>
    <label>Process Start Date</label>
    <type>Date</type>
</CustomField>