Agentforce/force-app/main/default/objects/Bid__c/fields/Bid_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Bid_Strategy__c</fullName>
    <description>Bid Strategy- Data Dictionary Consolidation</description>
    <label>Bid Strategy</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>