Agentforce/force-app/main/default/objects/Bid__c/fields/Bid_Type__c.field-meta.xml
<CustomField>
    <fullName>Bid_Type__c</fullName>
    <description>AD-447 - picklist values to identify the Bid record type</description>
    <label>Bid Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Bid</fullName>
                <label>RFI &amp; RFP</label>
            </value>
            <value>
                <fullName>Lite Bid</fullName>
                <label>RFP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>