Agentforce/force-app/main/default/objects/Bid__c/fields/Client_Driver1__c.field-meta.xml
<CustomField>
    <fullName>Client_Driver1__c</fullName>
    <description>Client Driver 1- Data Dictionary Consolidation</description>
    <label>Client Driver 1</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>