Agentforce/force-app/main/default/objects/Bid__c/fields/Client_Driver2__c.field-meta.xml
<CustomField>
    <fullName>Client_Driver2__c</fullName>
    <description>Client Driver 2- Data Dictionary Consolidation</description>
    <label>Client Driver 2</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>