Agentforce/force-app/main/default/objects/Bid__c/fields/Client_Driver3__c.field-meta.xml
<CustomField>
    <fullName>Client_Driver3__c</fullName>
    <description>Client Driver 3- Data Dictionary Consolidation</description>
    <label>Client Driver 3</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>