Agentforce/force-app/main/default/objects/Bid__c/fields/Client_Need1__c.field-meta.xml
<CustomField>
    <fullName>Client_Need1__c</fullName>
    <description>Client Need 1- Data Dictionary Consolidation</description>
    <label>Client Need 1</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>