Agentforce/force-app/main/default/objects/Bid__c/fields/Client_Need2__c.field-meta.xml
<CustomField>
    <fullName>Client_Need2__c</fullName>
    <description>Client Need 2- Data Dictionary Consolidation</description>
    <label>Client Need 2</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>