Agentforce/force-app/main/default/objects/Bid__c/fields/Client_Need3__c.field-meta.xml
<CustomField>
    <fullName>Client_Need3__c</fullName>
    <description>Client Need 3- Data Dictionary Consolidation</description>
    <label>Client Need 3</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>