Agentforce/force-app/main/default/objects/Bid__c/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <description>AD-692 - Set the Closed Reason on the Bid record</description>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity Withdrawn</fullName>
            </value>
            <value>
                <fullName>Bid Successful</fullName>
            </value>
            <value>
                <fullName>Bid Unsuccessful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>