Agentforce/force-app/main/default/objects/Bid__c/fields/Competitor_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Strategy__c</fullName>
    <description>Competitor Strategy- Data Dictionary Consolidation</description>
    <label>Competitor Strategy</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>