Agentforce/force-app/main/default/objects/Bid__c/fields/Count_IT_Requirements_Bid_Supports__c.field-meta.xml
<CustomField>
    <fullName>Count_IT_Requirements_Bid_Supports__c</fullName>
    <description>Populated by DLRS</description>
    <label># IT Requirements Bid Supports</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>