Agentforce/force-app/main/default/objects/Bid__c/fields/Count_Pricing_Bid_Supports__c.field-meta.xml
<CustomField>
    <fullName>Count_Pricing_Bid_Supports__c</fullName>
    <description>Populated by DLRS</description>
    <label># Pricing Bid Supports</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>