Agentforce/force-app/main/default/objects/Bid__c/fields/Creator_Country__c.field-meta.xml
<CustomField>
    <fullName>Creator_Country__c</fullName>
    <description>AD-673 - Add creator country for sharing</description>
    <label>Creator Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>