Agentforce/force-app/main/default/objects/Bid__c/fields/Creator_Region__c.field-meta.xml
<CustomField>
    <fullName>Creator_Region__c</fullName>
    <description>AD-344 - field to capture the region of the user who created the related Opportunity</description>
    <formula>Opportunity__r.Creator_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creator Region</label>
    <type>Text</type>
</CustomField>