Agentforce/force-app/main/default/objects/Bid__c/fields/Credit_Comment__c.field-meta.xml
<CustomField>
    <fullName>Credit_Comment__c</fullName>
    <description>Credit Comment- Data Dictionary Consolidation</description>
    <label>Credit Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>