Agentforce/force-app/main/default/objects/Bid__c/fields/Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rating__c</fullName>
    <description>Credit Rating- Data Dictionary Consolidation</description>
    <label>Credit Rating</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>