Agentforce/force-app/main/default/objects/Bid__c/fields/Credit_Risk_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Risk_Date__c</fullName>
    <description>Credit Risk Date- Data Dictionary Consolidation</description>
    <label>Credit Risk Date</label>
    <type>Date</type>
</CustomField>