Agentforce/force-app/main/default/objects/Bid__c/fields/Current_Contract_GM_Percent__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_GM_Percent__c</fullName>
    <description>Field to display the GM % from the related Opportunity&apos;s Contract&apos;s Actual GM %.</description>
    <formula>Opportunity__r.Contract__r.Actual_GM_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Contract GM %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>