Agentforce/force-app/main/default/objects/Bid__c/fields/Current_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_Value__c</fullName>
    <description>Field to display the current contract value on a Rebid or Extension Opportunity</description>
    <formula>Opportunity__r.Current_Contract_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>