Agentforce/force-app/main/default/objects/Bid__c/fields/Decision_Maker_Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Job_Role__c</fullName>
    <description>Decision Maker Job Role- Data Dictionary Consolidation</description>
    <label>Decision Maker Job Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>