Agentforce/force-app/main/default/objects/Bid__c/fields/Decision_Maker_Name__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Decision Maker Name- Data Dictionary Consolidation</description>
    <label>Decision Maker Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bids</relationshipLabel>
    <relationshipName>Bids</relationshipName>
    <type>Lookup</type>
</CustomField>