Agentforce/force-app/main/default/objects/Bid__c/fields/Delegated_Approver__c.field-meta.xml
<CustomField>
    <fullName>Delegated_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-344 - lookup to a user who is the Delegated Approver for the Bid</description>
    <label>Delegated Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bids</relationshipName>
    <type>Lookup</type>
</CustomField>