Agentforce/force-app/main/default/objects/Bid__c/fields/Design__c.field-meta.xml
<CustomField>
    <fullName>Design__c</fullName>
    <description>Field to capture the User who is responsible for the Design of the related Opportunity</description>
    <formula>Opportunity__r.Design__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Design</label>
    <type>Text</type>
</CustomField>