Agentforce/force-app/main/default/objects/Bid__c/fields/Driver_Evidence1__c.field-meta.xml
<CustomField>
    <fullName>Driver_Evidence1__c</fullName>
    <description>Client Driver Evidence 1- Data Dictionary Consolidation</description>
    <label>Client Driver Evidence 1</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>