Agentforce/force-app/main/default/objects/Bid__c/fields/Driver_Evidence2__c.field-meta.xml
<CustomField>
    <fullName>Driver_Evidence2__c</fullName>
    <description>Client Driver Evidence 2- data Dictionary Consolidation</description>
    <label>Client Driver Evidence 2</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>