Agentforce/force-app/main/default/objects/Bid__c/fields/Driver_Evidence3__c.field-meta.xml
<CustomField>
    <fullName>Driver_Evidence3__c</fullName>
    <description>Client Driver Evidence 3- Data Dictionary Consolidation</description>
    <label>Client Driver Evidence 3</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>