Agentforce/force-app/main/default/objects/Bid__c/fields/Estimator__c.field-meta.xml
<CustomField>
    <fullName>Estimator__c</fullName>
    <description>Field to capture the User who will act as the Estimator on the related Opportunity</description>
    <formula>Opportunity__r.Estimator__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimator</label>
    <type>Text</type>
</CustomField>