Agentforce/force-app/main/default/objects/Bid__c/fields/Evaluate_Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>Evaluate_Credit_Check__c</fullName>
    <description>To evaluate if a credit check has been completed or not based on credit score data and credit risk. The credit check performed If any of this field is not null.</description>
    <formula>IF(
     (ISPICKVAL( Account__r.Credit_Risk__c , &quot;&quot;)   &amp;&amp;   ISNULL( Account__r.Latest_Credit_Score_Date__c )),
    &quot;No&quot;,
    &quot;Yes&quot;
)</formula>
    <label>Has a credit check been completed?</label>
    <type>Text</type>
</CustomField>