Agentforce/force-app/main/default/objects/Bid__c/fields/Extension_Option_2_Term_Yrs__c.field-meta.xml
<CustomField>
    <fullName>Extension_Option_2_Term_Yrs__c</fullName>
    <label>Extension Option 2 Term (Yrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>