Agentforce/force-app/main/default/objects/Bid__c/fields/Governance_Sign_Off_Status__c.field-meta.xml
<CustomField>
    <fullName>Governance_Sign_Off_Status__c</fullName>
    <description>AD-344 - field to capture the status of the Governance Sign-Off Approval</description>
    <label>Governance Sign-Off Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>