Agentforce/force-app/main/default/objects/Bid__c/fields/Governance_Sign_Off_Status_Comments__c.field-meta.xml
<CustomField>
    <fullName>Governance_Sign_Off_Status_Comments__c</fullName>
    <label>Governance Sign Off Status (Comments)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>