Agentforce/force-app/main/default/objects/Bid__c/fields/Gross_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_Percent__c</fullName>
    <description>Data Dictionary Consolidation</description>
    <formula>Opportunity__r.Annual_GMPercentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>