Agentforce/force-app/main/default/objects/Bid__c/fields/Head_of_Bid_DEP__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Bid_DEP__c</fullName>
    <description>Field to capture the Principal Bid Manager for the related Opportunity</description>
    <formula>Opportunity__r.Head_of_Bid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Head of Bid DEP</label>
    <type>Text</type>
</CustomField>