Agentforce/force-app/main/default/objects/Bid__c/fields/Incumbent_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_Strategy__c</fullName>
    <description>Incumbent Strategy- Data Dictionary Consolidation</description>
    <label>Incumbent Strategy</label>
    <type>TextArea</type>
</CustomField>