Agentforce/force-app/main/default/objects/Bid__c/fields/Is_Bid_Manager__c.field-meta.xml
<CustomField>
    <fullName>Is_Bid_Manager__c</fullName>
    <description>Ticked if Bid Manager = Current User</description>
    <formula>Bid_Manager__c = $User.Id</formula>
    <label>Is Bid Manager</label>
    <type>Checkbox</type>
</CustomField>