Agentforce/force-app/main/default/objects/Bid__c/fields/IT_Support__c.field-meta.xml
<CustomField>
    <fullName>IT_Support__c</fullName>
    <description>Field to capture the User who will act as IT Support for the related Opportunity</description>
    <formula>Opportunity__r.IT_Support__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IT Support</label>
    <type>Text</type>
</CustomField>