Agentforce/force-app/main/default/objects/Bid__c/fields/Legacy_Estimator__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Estimator__c</fullName>
    <label>Legacy Estimator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>