Agentforce/force-app/main/default/objects/Bid__c/fields/Legacy_OCS_Governance_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_OCS_Governance_ID__c</fullName>
    <label>Legacy OCS Governance ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>