Agentforce/force-app/main/default/objects/Bid__c/fields/Legacy_OCS_Pre_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Legacy_OCS_Pre_Qualification__c</fullName>
    <label>Legacy OCS Pre Qualification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>