Agentforce/force-app/main/default/objects/Bid__c/fields/Legal__c.field-meta.xml
<CustomField>
    <fullName>Legal__c</fullName>
    <description>Field to capture the legal User linked to the related Opportunity</description>
    <formula>Opportunity__r.Legal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal</label>
    <type>Text</type>
</CustomField>