Agentforce/force-app/main/default/objects/Bid__c/fields/Legal_Manager_email__c.field-meta.xml
<CustomField>
    <fullName>Legal_Manager_email__c</fullName>
    <label>Legal Manager [email]</label>
    <type>Email</type>
</CustomField>