Agentforce/force-app/main/default/objects/Bid__c/fields/Measurement1__c.field-meta.xml
<CustomField>
    <fullName>Measurement1__c</fullName>
    <description>Measurement 1- Data Dictionary Consolidation</description>
    <label>Measurement 1</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>