Agentforce/force-app/main/default/objects/Bid__c/fields/Measurement2__c.field-meta.xml
<CustomField>
    <fullName>Measurement2__c</fullName>
    <description>Measurement 2- Data Dictionary Consolidation</description>
    <label>Measurement 2</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>