Agentforce/force-app/main/default/objects/Bid__c/fields/Measurement3__c.field-meta.xml
<CustomField>
    <fullName>Measurement3__c</fullName>
    <description>Measurement 3- Data Dictionary Consolidation</description>
    <label>Measurement 3</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>