Agentforce/force-app/main/default/objects/Bid__c/fields/Negotiation_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Outcome__c</fullName>
    <formula>TEXT(Opportunity__r.Negotiation_Outcome__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negotiation Outcome</label>
    <type>Text</type>
</CustomField>