Agentforce/force-app/main/default/objects/Bid__c/fields/Negotiation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Start_Date__c</fullName>
    <formula>Opportunity__r.Negotiation_Start_Date__c</formula>
    <label>Negotiation Start Date</label>
    <type>Date</type>
</CustomField>