Agentforce/force-app/main/default/objects/Bid__c/fields/Negotiation_Start_Date_DEP__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Start_Date_DEP__c</fullName>
    <description>AD-716 - Store the date in which the Negotiations start</description>
    <label>Negotiation Start Date DEP</label>
    <type>Date</type>
</CustomField>