Agentforce/force-app/main/default/objects/Bid__c/fields/No_of_Bid_Supports__c.field-meta.xml
<CustomField>
    <fullName>No_of_Bid_Supports__c</fullName>
    <formula>Count_Bid_Management_Bid_Supports__c +  Count_Design_Bid_Supports__c +  Count_IT_Requirements_Bid_Supports__c +  Count_Legal_Bid_Supports__c +  Count_Pricing_Bid_Supports__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Bid Supports</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>