Agentforce/force-app/main/default/objects/Bid__c/fields/No_of_Bid_Supports_Pending_Approval__c.field-meta.xml
<CustomField>
    <fullName>No_of_Bid_Supports_Pending_Approval__c</fullName>
    <description>Formula field from Opportunity. Populated on Opp by DLRS.</description>
    <formula>Opportunity__r.No_of_Bid_Supports_Pending_Approval__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Bid Supports Pending Approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>