Agentforce/force-app/main/default/objects/Bid__c/fields/No_of_Pending_Bid_Supports__c.field-meta.xml
<CustomField>
    <fullName>No_of_Pending_Bid_Supports__c</fullName>
    <description>Populated by DLRS.
Number of Bid Supports with Status = Pending</description>
    <label># Pending Bid Supports</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>