Agentforce/force-app/main/default/objects/Bid__c/fields/Offer1__c.field-meta.xml
<CustomField>
    <fullName>Offer1__c</fullName>
    <description>Offer 1- Data Dictionary Consolidation</description>
    <label>Offer 1</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>