Agentforce/force-app/main/default/objects/Bid__c/fields/Offer2__c.field-meta.xml
<CustomField>
    <fullName>Offer2__c</fullName>
    <description>Offer 2- Data Dictionary Consolidation</description>
    <label>Offer 2</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>