Agentforce/force-app/main/default/objects/Bid__c/fields/Offer3__c.field-meta.xml
<CustomField>
    <fullName>Offer3__c</fullName>
    <description>Offer 3- Data Dictionary Consolidation</description>
    <label>Offer 3</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>