Agentforce/force-app/main/default/objects/Bid__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>AD-289 - lookup to Opportunity from Bid record</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Bids</relationshipLabel>
    <relationshipName>Bids</relationshipName>
    <type>Lookup</type>
</CustomField>