Agentforce/force-app/main/default/objects/Bid__c/fields/Opportunity_Next_Step_History__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Next_Step_History__c</fullName>
    <label>Opportunity Next Step History</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>