Agentforce/force-app/main/default/objects/Bid__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <description>AD-307 - field to capture the Opportunity owner&apos;s name</description>
    <formula>Opportunity__r.Owner.FirstName + &quot; &quot; +  Opportunity__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>