Agentforce/force-app/main/default/objects/Bid__c/fields/Opportunity_Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sub_Stage__c</fullName>
    <description>AD-344 - text value to capture the sub-stage of the related Opportunity</description>
    <formula>TEXT(Opportunity__r.Sub_Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Sub-Stage</label>
    <type>Text</type>
</CustomField>