Agentforce/force-app/main/default/objects/Bid__c/fields/Ops_Director__c.field-meta.xml
<CustomField>
    <fullName>Ops_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Data Dictionary Consolidation</description>
    <label>Ops Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bids1</relationshipName>
    <type>Lookup</type>
</CustomField>