Agentforce/force-app/main/default/objects/Bid__c/fields/Original_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Contract_Start_Date__c</fullName>
    <description>Original Contract Start date on the existing Contract for a Rebid or Extension Opportunity</description>
    <formula>IF(
    ISPICKVAL( Opportunity__r.Type , &quot;Rebid&quot;) &amp;&amp; NOT(ISBLANK( Opportunity__r.ContractId )),
     Opportunity__r.Contract__r.Contract_Start_Date__c ,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Contract Start Date</label>
    <type>Date</type>
</CustomField>